nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-depl
  namespace: nginx-ingress
spec:
  selector:
    app: node-app-depl
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
